--- a/angular.json
+++ b/angular.json
@@ -105,6 +105,13 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2,
+            "browserTarget": "intro-angular:build:production"
+          }
         }
       }
     }
